# pygtk-gtk-win32

./: .hgignore  CMakeLists.txt  aclocal.m4  config.h
gtk/: Makefile.in
